[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,13 @@ body {
 .img-medium {
     height: 200px;
 }
+.container {
+    max-width: 800px;
+    color: #5f5353;
+    font-family: sans-serif;
+    padding-top: 60px;
+    margin: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+}
 
